# posthog-rs

./: Cargo.toml
async/: Cargo.toml
async/src/: client.rs  client_options.rs
core/: Cargo.toml
core/src/: error.rs  event.rs
sync/: Cargo.toml
sync/src/: client.rs  client_options.rs  error.rs
