[package]
name = "async-posthog"
license = "MIT"
version = "0.2.3"
description = "An unofficial Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/shuttle-hq/posthog-rs"
edition = "2021"

[dependencies]
posthog-core = { path = "../core" }
reqwest = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "2"
